overlay/registry/base-ingress-http/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: #@ data.values.registry.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`) && PathPrefix(`/v2`)".format(data.values.registry.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: registry
      port: 5000
      strategy: RoundRobin
